--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 
 
         <div class="row justify-content-md-center">
+
+            <p style="text-align:center;">
+                <image src="img/anchor_figure.png" width="100%"></image>
+            </p>
             <div class="col-md-10 col-lg-8">
                 <h3 class="mt-4 mb-2">
                     Abstract
