--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </p>
 
                 <p style="text-align:center;">
-                    <image src="img/fig1_rss_real_scenarios.png" width="75%"></image>
+                    <image src="img/gradCAM_figure.png" width="100%"></image>
                 </p>
 
             </div>
@@ -199,34 +199,17 @@
                     and <span>&lambda;&rarr;&infin;</span> gives multi-modal behavior cloning. We call this tunability <em>policy blending</em>.
                 </p>
 
+                <!--
                 <p style="text-align:center;">
                     <image src="img/fig2_master_simplified.png" width="100%"></image>
-<!--                    <embed type="application/pdf" src="img/figure1_tricolumn-compressed.pdf"></embed>-->
                 </p>
+                 -->
                 <!-- Put a better overview here -->
                 <p class="text-justify">
-                    KLGame incentivizes the trajectories of planning agents to not only optimize hand-crafted cost heuristics, but also to adhere to 
-                    a <em>reference policy</em>. In this work, we assume that the reference policy is distilled from data or expert knowledge, is stochastic,
-                    and may be multi-modal in general. In contrast to other integrated prediction and planning methods, KLGame (i) provides an analytically 
-                    and computationally sound methodology for planning under strategy uncertainty, exactly solving the regularized stochastic optimization problem; 
-                    and (ii) incorporates <em>tunable</em> multi-modal, data-driven motion predictions in the optimal policy through a scalar parameter, allowing 
-                    the planner to modulate between purely data-driven and purely optimal behaviors.
+                    BYOVLA Overview?
                     <!-- TODO Figure highlighting all the experiments maybe?-->
-                </p>
-                                <p style="text-align:center;">
-                    <image src="img/scenario_3.png" width="100%"></image>
-<!--                    <embed type="application/pdf" src="img/figure1_tricolumn-compressed.pdf"></embed>-->
-                </p>
                 <p class="text-justify">
-                    We study the role of the reference policy in helping KLGame find diverse game solutions more amenable to execution than existing methods. 
-                    We compare our method against a mixture of deterministic, stochastic, and data-driven baselines on three simulated interaction scenarios with 
-                    nonconvex costs and mode uncertainty. 
-                </p>
-                <p class="text-justify">
-                    In the first experiment we show that mixing the game’s payoff with the expert’s reference policy allows the game solver to <em>break out of a suboptimal equilibrium</em>. 
-                    We then demonstrate that a blended multi-modal KLGame policy can balance between competitiveness and cautiousness in <em>fast and rivalrous</em> interactions such as car racing.
-                    Finally, we validate that the KLGame planner can integrates a state-of-the-art large-scale, data-driven behavior model with an optimization-based game policy - improving
-                    safety for complex tasks such as urban autonomous driving - <em>at scale</em>.
+                    Experimental results and images, videos, gifs.
                     
                 </p>
 
