resizing some figures

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="row justify-content-md-center">
             <div class="col-md-2 text-center">
-                <a href="https://arxiv.org/pdf/2402.14174.pdf">
+                <a href="https://aasherh.github.io/data/Hancock_Visually_Robust_VLAs.pdf">
                     <image src="img/paper.png" height="110px" width="85px"></image>
                 <h4><strong>Paper</strong></h4>
                 </a>
