--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
                 </a>
             </div>
         </div>
+        <!--
         <div class="row mt-2">
             <h3 class="col-md-12 text-center">
                 ICRA 2025 </br> </br>
             </h3>
         </div>
+        -->
 
         <div class="row justify-content-md-center">
             <div class="col-md-2 text-center">
@@ -86,7 +88,7 @@
             </div>
             <!-- TODO -->
             <div class="col-md-2 text-center">
-                <a href="https://github.com/SafeRoboticsLab/KLGame">
+                <a href="https://github.com/irom-lab">
                 <image src="img/github.png"  height="110px"></image>
                 <h4><strong>Code</strong></h4>
                 </a>
@@ -198,7 +200,7 @@
                     that modulates behaviors on a spectrum: <span>&lambda;=0</span> gives a deterministic dynamic game (<em>task-optimal</em>), 
                     and <span>&lambda;&rarr;&infin;</span> gives multi-modal behavior cloning. We call this tunability <em>policy blending</em>.
                 </p>
-                
+
                 <p style="text-align:center;">
                     <image src="img/fig2_master_simplified.png" width="100%"></image>
                 </p>
