--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
         
 
         <div class="row justify-content-md-center">
-            <div class="col-md-2 text-center">
+            <!--<div class="col-md-2 text-center">-->
+            <div class="col-4"></div>
                 <a href="https://irom-lab.princeton.edu/">
                     <image src="img/irom_lab.png" height="35px", width="150px" ></image>
                 </a>
             </div>
-            <div class="col-md-2 text-center">
+            <div class="col-4">
                 <a href="https://www.princeton.edu/">
                     <image src="img/PU1line.svg" height="55px"></image>
                 </a>
