--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="row justify-content-md-center">
             <!--<div class="col-md-2 text-center">-->
-            <div class="col-4"></div>
+            <div class="col-4">
                 <a href="https://irom-lab.princeton.edu/">
                     <image src="img/irom_lab.png" height="35px", width="150px" ></image>
                 </a>
@@ -79,33 +79,6 @@
             </h3>
         </div>
         -->
-
-        <div class="row justify-content-md-center">
-            <div class="col-md-2 text-center">
-                <a href="https://aasherh.github.io/data/Hancock_Visually_Robust_VLAs.pdf">
-                    <image src="img/paper.png" height="55px" width="43px"></image>
-                <h4><strong>Paper</strong></h4>
-                </a>
-            </div>
-            <!-- TODO -->
-            <div class="col-md-2 text-center">
-                <a href="https://github.com/irom-lab">
-                <image src="img/github.png"  height="55px"></image>
-                <h4><strong>Code</strong></h4>
-                </a>
-            </div>
-            <!-- For when we have folder ready -->
-            <!-- <div class="col-md-2 text-center">
-                <a href="https://drive.google.com/drive/folders/13qAaPCHEcx93BTcPwwXSITSm7LKsAohr?usp=sharing">
-                <image src="img/database.png"  height="110px"></image>
-                <h4><strong>
-                    Dataset
-                </strong></h4>
-                </a>
-            </div> -->
-        </div>
-
-
 
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
@@ -241,6 +214,22 @@
                       }
                 -->
                 </code></pre>
+            </div>
+        </div>
+
+        <div class="row justify-content-md-center">
+            <div class="col-md-2 text-center">
+                <a href="https://aasherh.github.io/data/Hancock_Visually_Robust_VLAs.pdf">
+                    <image src="img/paper.png" height="55px" width="43px"></image>
+                <h4><strong>Paper</strong></h4>
+                </a>
+            </div>
+            <!-- TODO -->
+            <div class="col-md-2 text-center">
+                <a href="https://github.com/irom-lab">
+                <image src="img/github.png"  height="55px"></image>
+                <h4><strong>Code</strong></h4>
+                </a>
             </div>
         </div>
 
