--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container" id="main">
         <div class="row mt-4">
             <h2 class="col-md-12 text-center">
-                Run-time Observation Interventions </br> Make Vision-Language-Action Models More Visually Robust</br>
+                Run-time Observation Interventions </br> Make Vision-Language-Action Models More Visually Robust
             </h2>
         </div>
         
@@ -85,6 +85,16 @@
                 <p style="text-align:center;">
                     <image src="img/anchor_figure.png" width="100%"></image>
                 </p>
+                <h3 class="mt-4 mb-2"></h3>
+                    TLDR
+                </h3>
+                <p class="text-justify">
+                    We introduce Bring Your Own VLA (BYOVLA): a run-time intervention scheme for vision-language-action (VLA) models 
+                    that improves baseline performance in the presence of distractor objects and backgrounds. </br>
+                    BYOVLA is compatible with any off the shelf VLA without model finetuning or access to the model's weights. </br> 
+                </p>
+
+                <!--
                 <h3 class="mt-4 mb-2">
                     Abstract
                 </h3>
@@ -105,6 +115,8 @@
                     and backgrounds, which otherwise degrade task success rates
                     by up to 40%.
                 </p>
+                -->
+
                 <!-- PUT VIDEO HERE LATER
                 <div class="col-md-12">
                     <video id="v0" width="60%" preload="metadata" playsinline controls>
