--- a/index.html
+++ b/index.html
@@ -53,14 +53,19 @@
                     <br>
                     <li><a href="https://aasherh.github.io/">Asher J. Hancock</a></li>
                     <li><a href="https://allenzren.github.io/">Allen Z. Ren</a></li>
-                    <li><a href="https://mae.princeton.edu/people/faculty/majumdar">Anirudha Majumdar</a></li>
+                    <li><a href="https://irom-lab.princeton.edu/majumdar/">Anirudha Majumdar</a></li>
                 </ul>
             </div>
         </div>
         
 
         <div class="row justify-content-md-center">
-            <!--<div class="col-md-2 text-center">-->
+            <div class="col-md-2 text-center">
+                <a href="https://irom-lab.princeton.edu/"></a>
+                    <image src="img/irom_princeton_logo.png" height="35px", width="150px" ></image>
+                </a>
+            </div>
+            <!--<div class="col-md-2 text-center">
             <div class="col-4">
                 <a href="https://irom-lab.princeton.edu/">
                     <image src="img/irom_lab.png" height="35px", width="150px" ></image>
@@ -72,6 +77,7 @@
                 </a>
             </div>
         </div>
+         -->
         <!--
         <div class="row mt-2">
             <h3 class="col-md-12 text-center">
@@ -85,13 +91,12 @@
                 <p style="text-align:center;">
                     <image src="img/anchor_figure.png" width="100%"></image>
                 </p>
-                <h3 class="mt-4 mb-2"></h3>
+                <h3 class="mt-4 mb-2">
                     TLDR
                 </h3>
                 <p class="text-justify">
                     We introduce Bring Your Own VLA (BYOVLA): a run-time intervention scheme for vision-language-action (VLA) models 
-                    that improves baseline performance in the presence of distractor objects and backgrounds. </br>
-                    BYOVLA is compatible with any off the shelf VLA without model finetuning or access to the model's weights. </br> 
+                    that improves baseline performance in the presence of distractor objects and backgrounds without finetuning or access to the model's weights. </br> 
                 </p>
 
                 <!--
