--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </div>
         
 
-        <div class="row justify-content-md-center">
-            <div class="col-md-2 text-center">
+        <div class="row mt-4">
+            <div class="text-center">
                 <a href="https://irom-lab.princeton.edu/"></a>
                     <image src="img/irom_princeton_logo.png" height="50px", width="600px" ></image>
                 </a>
