--- a/index.html
+++ b/index.html
@@ -56,14 +56,11 @@
                 </ul>
             </div>
         </div>
-        
-
         <div class="row mt-4">
             <div class="text-center">
-                <a href="https://irom-lab.princeton.edu/"></a>
-                    <image src="img/irom_princeton_logo.png" height="50px", width="600px" ></image>
-                </a>
+                <image src="img/irom_princeton_logo.png" height="50px", width="600px" ></image>
             </div>
+        </div>
             <!--<div class="col-md-2 text-center">
             <div class="col-4">
                 <a href="https://irom-lab.princeton.edu/">
