--- a/index.html
+++ b/index.html
@@ -56,11 +56,28 @@
                 </ul>
             </div>
         </div>
+
+        <div class="row"></div>
+            <div class="col-md-12 text-center">
+                <ul class="list-inline">
+                    <li><a href="https://irom-lab.princeton.edu/">
+                        <image src="img/irom_lab.png" height="35px", width="150px" ></image>
+                    </a></li>
+                    <li> <a href="https://www.princeton.edu/">
+                        <image src="img/PU1line.svg" height="55px"></image>
+                    </a></li>
+                    
+                </ul>
+            </div>
+        </div>
+
+        <!--
         <div class="row mt-4">
             <div class="text-center">
                 <image src="img/irom_princeton_logo.png" height="50px", width="600px" ></image>
             </div>
         </div>
+        -->
             <!--<div class="col-md-2 text-center">
             <div class="col-4">
                 <a href="https://irom-lab.princeton.edu/">
