--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
 
-        <div class="row"></div>
+        <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li><a href="https://irom-lab.princeton.edu/">
@@ -86,34 +86,6 @@
                 </ul>
             </div>
         </div>
-
-        <!--
-        <div class="row mt-4">
-            <div class="text-center">
-                <image src="img/irom_princeton_logo.png" height="50px", width="600px" ></image>
-            </div>
-        </div>
-        -->
-            <!--<div class="col-md-2 text-center">
-            <div class="col-4">
-                <a href="https://irom-lab.princeton.edu/">
-                    <image src="img/irom_lab.png" height="35px", width="150px" ></image>
-                </a>
-            </div>
-            <div class="col-4">
-                <a href="https://www.princeton.edu/">
-                    <image src="img/PU1line.svg" height="55px"></image>
-                </a>
-            </div>
-        </div>
-         -->
-        <!--
-        <div class="row mt-2">
-            <h3 class="col-md-12 text-center">
-                ICRA 2025 </br> </br>
-            </h3>
-        </div>
-        -->
 
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
@@ -179,7 +151,7 @@
                           <p>
                             Task: "place the carrot on yellow plate"<br>
                             Scenario: no distractors <br>
-                            Policy: Octo-Base <br>
+                            Policy: Octo-Base
                           </p>
                           <p style="color: green">Success</p>
                       </div>
@@ -192,7 +164,7 @@
                             <p>
                               Task: "place the carrot on yellow plate"<br>
                               Scenario: object distractors <br>
-                              Policy: Octo-Base <br>
+                              Policy: Octo-Base
                             </p>
                             <p style="color: red">Failure</p>
                         </div>
@@ -205,7 +177,7 @@
                             <p>
                               Task: "place the carrot on yellow plate"<br>
                               Scenario: object distractors <br>
-                              Policy: Octo-Base <b>with BYOVLA</b> <br>
+                              Policy: Octo-Base <b>with BYOVLA</b>
                             </p>
                             <p style="color: green">Success</p>
                         </div>
@@ -214,51 +186,8 @@
                 </div>
               </div>
             </section>
-          </div>
-          <br>
-
-
-
-
-    <!--
-        <div class="row justify-content-md-center">
-            <div class="col-md-10 col-lg-8">
-                <h3 class="mt-4 mb-2">
-                    Contributions
-                    
-                </h3>
-                <p class="text-justify">
-                    To this end, we propose Bring Your
-                    Own VLA (BYOVLA): a run-time intervention scheme that
-                    improves visual generalization of off the shelf VLAs by
-                    minimally altering regions in the VLA's visual inputs in order
-                    to reduce sensitivity against visual distractors. The key idea
-                    is to identify (at run-time) which regions of the visual input
-                    the model is sensitive to using a visual sensitivity probe that
-                    perturbs different segments of the visual input. BYOVLA
-                    queries a vision-language model (VLM) to identify which
-                    regions in the environment are task-irrelevant and alters a
-                    region using automated image editing tools (e.g., inpainting
-                    a distractor object) if the region is task-irrelevant and the
-                    VLA is sensitive to it
-
-                    BYOVLA can be applied to any VLA model without finetuning or access to the model's weights. Across multiple
-                    language-instructed manipulation tasks and varying distractor
-                    objects and backgrounds, BYOVLA improves task success
-                    rates by 20-40% compared to the original VLA, while also
-                    significantly improving performance relative to baselines that
-                    perform run-time interventions (1) without accounting for the
-                    model's visual sensitivity or (2) assessing sensitivity via prior
-                    image attribution methods
-                </p>
-
-                <p style="text-align:center;">
-                    <image src="img/gradCAM_figure.png" width="100%"></image>
-                </p>
-
-            </div>
         </div>
-    -->
+        <br>
 
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
@@ -294,14 +223,6 @@
 
             </div>
         </div>
-
-<!--        <div class="row justify-content-md-center">-->
-<!--            <div class="col-md-10 col-lg-8">-->
-<!--                <h3 class="mt-4 mb-2">-->
-<!--                    TODO: bimanual videos-->
-<!--                </h3>-->
-<!--            </div>-->
-<!--        </div>-->
 
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
