trying videos with css

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <br>
 
-        <div class='myscope'>
+        <div class='row justify-content-md-center'>
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
