--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
                             <p style="color: green">Success</p>
                         </div>
                     </div>
+					 <div class="item-4">
+                        <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
+                            <source src="videos/byovla_success_10x.mp4" type="video/mp4">
+                        </video>
+                        <div class="video-overlay">
+                            <p>
+                              Task: "place the carrot on yellow plate"<br>
+                              Scenario: object distractors <br>
+                              Policy: Octo-Base <b>with BYOVLA</b>
+                            </p>
+                            <p style="color: green">Success</p>
+                        </div>
+                    </div>
                   </div>
                 </div>
               </div>
