trying videos with css

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <!-- <link rel="stylesheet" href="css/bulma.min.css"> -->
-    <!-- <link rel="stylesheet" href="css/bulma-carousel.min.css"> -->
-    <!-- <link rel="stylesheet" href="css/bulma-slider.min.css"> -->
+    <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/bulma-carousel.min.css">
+    <link rel="stylesheet" href="css/bulma-slider.min.css">
     <link rel="stylesheet" href="css/bulma-myscope.css">
     <!--<link rel="icon" href="img/hri_transparent.png">-->
 
@@ -132,7 +132,7 @@
         </div>
         <br>
 
-        <div class='row justify-content-md-center'>
+        <div class='myscope'>
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
