trying videos with css

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 <body>
     <div class="container" id="main">
         <div class="row mt-4">
-            <h2 class="col-md-12 text-center">
+            <h1 class="title is-1 publication-title">
                 Run-time Observation Interventions </br> Make Vision-Language-Action Models More Visually Robust
-            </h2>
+            </h1>
         </div>
         
         <div class="row">
@@ -166,19 +166,6 @@
                     </div>
                     <div class="item-3">
                         <video poster="" id="3" autoplay controls muted loop playsinline height="100%">
-                            <source src="videos/byovla_success_10x.mp4" type="video/mp4">
-                        </video>
-                        <div class="video-overlay">
-                            <p>
-                              Task: "place the carrot on yellow plate"<br>
-                              Scenario: object distractors <br>
-                              Policy: Octo-Base <b>with BYOVLA</b>
-                            </p>
-                            <p style="color: green">Success</p>
-                        </div>
-                    </div>
-					 <div class="item-4">
-                        <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
                             <source src="videos/byovla_success_10x.mp4" type="video/mp4">
                         </video>
                         <div class="video-overlay">
