--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 </head>
 <body>
     <div class="container" id="main">
-        <div class="row mt-4">
+        <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">
                 Run-time Observation Interventions </br> Make Vision-Language-Action Models More Visually Robust
             </h1>
         </div>
+        <br>
         
         <div class="row">
             <div class="col-md-12 text-center">
