trying videos with css

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
         <br>
         
         <div class="row">
+            <div class="is-size-5 publication-authors">
+                <span class="author-block">
+                    <a href="https://aasherh.github.io/">Asher J. Hancock</a>
+                </span>
+                <span class="author-block">
+                    <a href="https://allenzren.github.io/">Allen Z. Ren</a>
+                </span>
+                <span class="author-block">
+                    <a href="https://irom-lab.princeton.edu/majumdar/">Anirudha Majumdar</a>
+                </span>
+            </div>
+            <!--
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li><a href="https://aasherh.github.io/">Asher J. Hancock</a></li>
@@ -67,6 +79,7 @@
                     <li><a href="https://irom-lab.princeton.edu/majumdar/">Anirudha Majumdar</a></li>
                 </ul>
             </div>
+            -->
         </div>
 
         <div class="row">
