trying videos with css

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </h1>
         </div>
         
-        <div class="row">
+        <div class="row has-text-centered">
             <div class="is-size-5 publication-authors">
                 <span class="author-block">
                     <a href="https://aasherh.github.io/">Asher J. Hancock</a>
