--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
                 <p style="text-align:center;">
                     <image src="img/anchor_figure.png" width="100%"></image>
                 </p>
-                <h1 class="mt-4 mb-2">
-                    TLDR
-                </h1>
+                <h2 class="title is-3">TLDR</h2>
                 <p class="text-justify">
                     We introduce Bring Your Own VLA (BYOVLA): a run-time intervention scheme for vision-language-action (VLA) models 
                     that improves baseline performance in the presence of distractor objects and backgrounds without finetuning or access to the model's weights. </br> 
