--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
         <div class='myscope'>
             <section class="hero is-light is-small">
               <div class="hero-body">
+                <h2 class="title is-3">Experiments</h2>
+                <p class="text-justify">
+                   We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. With BYOVLA, the probability of success in the presence of task-irrelevant distractions is increased.</br> 
+                </p>
                 <div class="container">
                   <div id="results-carousel" class="carousel results-carousel">
   
