--- a/index.html
+++ b/index.html
@@ -145,16 +145,18 @@
         </div>
         <br>
 
+        <div class="col-md-10 col-lg-8">
+        <h2 class="title is-3">Experiments</h2>
+            <p class="text-justify">
+                We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. With BYOVLA, the probability of success in the presence of task-irrelevant distractions is increased.</br> 
+            </p>
+        </div>
+        
         <div class='myscope'>
             <section class="hero is-light is-small">
               <div class="hero-body">
-                <h2 class="title is-3">Experiments</h2>
-                <p class="text-justify">
-                   We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. With BYOVLA, the probability of success in the presence of task-irrelevant distractions is increased.</br> 
-                </p>
                 <div class="container">
                   <div id="results-carousel" class="carousel results-carousel">
-  
                     <div class="item-1">
                       <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
                           <source src="videos/baseline_success_10x.mp4" type="video/mp4">
