--- a/index.html
+++ b/index.html
@@ -110,51 +110,22 @@
                     that improves baseline performance in the presence of distractor objects and backgrounds without finetuning or access to the model's weights. </br> 
                 </p>
 
-                <!--
-                <h3 class="mt-4 mb-2">
-                    Abstract
-                </h3>
-                <p class="text-justify">
-                    Vision-language-action (VLA) models trained on
-                    large-scale internet data and robot demonstrations have the
-                    potential to serve as generalist robot policies. However, despite
-                    their large-scale training, VLAs are often brittle to taskirrelevant visual details such as distractor objects or background
-                    colors. We introduce Bring Your Own VLA (BYOVLA): a
-                    run-time intervention scheme that (1) dynamically identifies
-                    regions of the input image that the model is sensitive to, and (2)
-                    minimally alters task-irrelevant regions to reduce the model's
-                    sensitivity using automated image editing tools. Our approach
-                    is compatible with any off the shelf VLA without model finetuning or access to the model's weights. Hardware experiments
-                    on language-instructed manipulation tasks demonstrate that
-                    BYOVLA enables state-of-the-art VLA models to nearly retain
-                    their nominal performance in the presence of distractor objects
-                    and backgrounds, which otherwise degrade task success rates
-                    by up to 40%.
-                </p>
-                -->
-
-                <!-- PUT VIDEO HERE LATER
-                <div class="col-md-12">
-                    <video id="v0" width="60%" preload="metadata" playsinline controls>
-                        <source src="videos/final_compressed.mp4" type="video/mp4">
-                    </video>
-                </div>
-                -->
-                <!-- <p style="text-align:center;">
-                    <image src="img/fig1_rss_real_scenarios.png" width="75%"></image>
-                </p> -->
+                
             </div>
         </div>
         <br>
 
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
+            <p style="text-align:center;">
+            </p>
             <h2 class="title is-3">Experiments</h2>
                 <p class="text-justify">
                     We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. With BYOVLA, the probability of success in the presence of task-irrelevant distractions is increased.</br> 
                 </p>
             </div>
         </div>
+        <br>
 
         <div class='myscope'>
             <section class="hero is-light is-small">
