--- a/index.html
+++ b/index.html
@@ -102,15 +102,29 @@
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
                 <p style="text-align:center;">
-                    <image src="img/anchor_figure.png" width="100%"></image>
                 </p>
                 <h2 class="title is-3">TLDR</h2>
                 <p class="text-justify">
                     We introduce Bring Your Own VLA (BYOVLA): a run-time intervention scheme for vision-language-action (VLA) models 
                     that improves baseline performance in the presence of distractor objects and backgrounds without finetuning or access to the model's weights. </br> 
                 </p>
+            </div>
+        </div>
+        <br>
 
-                
+        <div class="row justify-content-md-center">
+            <div class="col-md-10 col-lg-8">
+                <h2 class="title is-3">Approach</h2>
+                <p style="text-align:center;">
+                    <image src="img/anchor_figure.png" width="100%"></image>
+                </p>
+                <p class="text-justify">
+                    BYOVLA is predicated on three simple steps which are applied to a VLA's input image: <br>
+                    1) Determine task-irrelevant regions <br>
+                    2) Apply visual sensitivity probe <br>
+                    3) Transform the image <br>
+                    Task-irrelevant regions are determined by an external vision-language model (VLM). If the VLA is sensitive to a task-irrelevant region, BYOVLA transforms the image such that the model is no longer sensitive by simply removing objects and recoloring backgrounds. 
+                </p>
             </div>
         </div>
         <br>
