--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="col-md-10 col-lg-8">
                 <p style="text-align:center;">
                 </p>
-                <h2 class="title is-3">TLDR</h2>
+                <!--<h2 class="title is-3">TLDR</h2>-->
                 <p class="text-justify">
                     We introduce Bring Your Own VLA (BYOVLA): a run-time intervention scheme for vision-language-action (VLA) models 
                     that improves baseline performance in the presence of distractor objects and backgrounds without finetuning or access to the model's weights. </br> 
