--- a/index.html
+++ b/index.html
@@ -228,6 +228,18 @@
         </div>
         <br>
 
+        <div class="row justify-content-md-center">
+            <div class="col-md-10 col-lg-8">
+            <p style="text-align:center;">
+            </p>
+            <h2 class="title is-3">Experiments</h2>
+                <p class="text-justify">
+                    We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. With BYOVLA, the probability of success in the presence of task-irrelevant distractions is increased.</br> 
+                </p>
+            </div>
+        </div>
+        <br>
+
         <div class="row justify-content-md-center"></div>
             <div class="col-md-10 col-lg-8">
                 <p style="text-align:center;">
@@ -256,6 +268,9 @@
             </div>
         </div>
 
+
+
+        <!--
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
                 <h3 class="mt-4 mb-2">
@@ -273,6 +288,21 @@
                 </code></pre>
             </div>
         </div>
+         -->
+
+            <div class="container is-max-desktop content">
+              <h2 class="title">BibTeX</h2>
+              <pre><code>
+                @article{lidard2024blending,
+                    title={Run-time Observation Interventions
+                        Make Vision-Language-Action Models More Visually Robust
+                        },
+                    author={Hancock, Asher J., and Ren, Allen Z., and Majumdar, Anirudha}
+                    journal={arXiv preprint FILL OUT LATER},
+                    year={2024}
+                  }
+        </code></pre>
+            </div>
 
         <div class="row justify-content-md-center">
             <div class="col-md-2 text-center">
