--- a/index.html
+++ b/index.html
@@ -70,6 +70,45 @@
                     <a href="https://irom-lab.princeton.edu/majumdar/"> Anirudha Majumdar</a>
                 </span>
             </div>
+
+            <div class="column has-text-centered">
+                <div class="publication-links">
+                  <!-- PDF Link. -->
+                  <span class="link-block">
+                    <a href="https://arxiv.org/abs/2406.09246"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-file-pdf"></i>
+                      </span>
+                      <span>Paper</span>
+                    </a>
+                  </span>
+            
+                  <!-- Code Link. -->
+                  <span class="link-block">
+                    <a href="https://github.com/openvla/openvla"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fab fa-github"></i>
+                      </span>
+                      <span>Code</span>
+                    </a>
+                  </span>
+                  
+                  <!-- CoLab Link. -->
+                  <!-- <span class="link-block">
+                    <a href="https://colab.research.google.com/github/openvla/openvla/blob/main/examples/openvla.ipynb"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <img src="static/images/colab_icon.png" />
+                      </span>
+                      <span>Let's try it!</span>
+                    </a>
+                  </span> -->
+  
+                </div>
+  
+              </div>
             <!--
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
