--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
                     We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. With BYOVLA, the probability of success in the presence of task-irrelevant distractions is increased.</br> 
                 </p>
             </div>
+            <p style="text-align:center;"></p>
+                    <image src="img/octo_figure_noFull.png" width="100%"></image>
+            </p>
         </div>
         <br>
 
