--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                 <p style="text-align:center;">
                     <image src="img/anchor_figure.png" width="100%"></image>
                 </p>
+                <br>
                 <p class="text-justify">
                     BYOVLA is predicated on three simple steps applied to a VLA's input image: 1) determine task-irrelevant regions, 2) quantify sensitivity with visual sensitivity probe, and 3) transform the image. 
                     Task-irrelevant regions are determined by a vision-language model (VLM). If the VLA is sensitive to a task-irrelevant region, BYOVLA transforms the image such that the model is no longer sensitive by simply removing objects and recoloring backgrounds. 
@@ -276,21 +277,23 @@
                     We evaluate BYOVLA on Octo-Base with the task "place the carrot on yellow plate." With distractions, the performance of the nominal VLA policy significantly drops. Augmenting Octo-Base with BYOVLA allows the policy to achieve its nominal task-success rate even with distractions present. 
                 </p>
             </div>
-            <p style="text-align:center;"></p>
-                <image src="img/octo_figure_noFull.png" width="75%"></image>
+            <p style="text-align:center;">
+                <image src="img/octo_figure_noFull.png" width="50%"></image>
             </p>
             <br>
             <p class="text-justify">
                 We also evaluate BYOVLA on OpenVLA-7b with the task "put the eggplant in the pot." Even though OpenVLA is 75x larger than Octo-Base, task-irrelevant distractions markedly degrade performance. We find that application of BYOVLA helps OpenVLA achieve its nominal task-success rate with distractions present. 
             </p>
+            <p style="text-align:center;">
+            <image src="img/openVLA_results.png" width="50%"></image>
+            </p>
         </div>
-        <p style="text-align:center;"></p>
-            <image src="img/openVLA_results.png" width="75%"></image>
-        </p>
 
         </div>
         <br>
 
+
+        <!--
         <div class="row justify-content-md-center"></div>
             <div class="col-md-10 col-lg-8">
                 <p style="text-align:center;">
@@ -318,7 +321,7 @@
                 </p>
             </div>
         </div>
-
+        -->
 
 
         <!--
