--- a/index.html
+++ b/index.html
@@ -276,17 +276,18 @@
                 <p class="text-justify">
                     We evaluate BYOVLA on Octo-Base with the task "place the carrot on yellow plate." With distractions, the performance of the nominal VLA policy significantly drops. Augmenting Octo-Base with BYOVLA allows the policy to achieve its nominal task-success rate even with distractions present. 
                 </p>
-            </div>
+            <!--</div>-->
             <p style="text-align:center;">
-                <image src="img/octo_figure_noFull.png" width="50%"></image>
+                <image src="img/octo_figure_noFull.png" width="65%"></image>
             </p>
             <br>
             <p class="text-justify">
                 We also evaluate BYOVLA on OpenVLA-7b with the task "put the eggplant in the pot." Even though OpenVLA is 75x larger than Octo-Base, task-irrelevant distractions markedly degrade performance. We find that application of BYOVLA helps OpenVLA achieve its nominal task-success rate with distractions present. 
             </p>
             <p style="text-align:center;">
-            <image src="img/openVLA_results.png" width="50%"></image>
+            <image src="img/openVLA_results.png" width="65%"></image>
             </p>
+        
         </div>
 
         </div>
