--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/fontawesome.all.min.css">
     <link rel="stylesheet" href="css/bulma-carousel.min.css">
     <link rel="stylesheet" href="css/bulma-slider.min.css">
     <link rel="stylesheet" href="css/bulma-myscope.css">
@@ -35,6 +36,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
     <script src="js/bulma-carousel.min.js"></script>
     <script src="js/bulma-slider.min.js"></script>
+    <script defer src="js/fontawesome.all.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/app.js"></script>
 	
